--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "*",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/svelte": "^3.0.3",
-    "@types/jest": "^26.0.21",
+    "@types/jest": "^27.0.2",
     "autoprefixer": "^10.2.5",
-    "babel-jest": "^26.6.3",
-    "cssnano": "^4.1.10",
-    "jest": "^26.6.3",
+    "babel-jest": "^27.3.1",
+    "cssnano": "^5.0.8",
+    "jest": "^27.3.1",
     "postcss": "^8.2.7",
     "postcss-load-config": "^3.0.1",
     "svelte": "^3.35.0",
-    "svelte-jester": "^1.3.1",
+    "svelte-jester": "^2.1.5",
     "svelte-preprocess": "^4.6.9",
-    "ts-jest": "^26.5.4",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.2.3",
     "vite": "^2.1.0"
   },
