--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/svelte": "^3.0.3",
     "@types/jest": "^27.0.2",
