--- a/package.json
+++ b/package.json
@@ -1,32 +1,40 @@
 {
-  "name": "sttv",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "NODE_ENV=development vite",
-    "build": "vite build",
-    "test": "jest",
-    "test:watch": "jest --watchAll",
-    "serve": "vite preview"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/svelte": "^3.0.3",
-    "@types/jest": "^27.0.2",
-    "autoprefixer": "^10.2.5",
-    "babel-jest": "^27.3.1",
-    "cssnano": "^5.0.8",
-    "jest": "^27.3.1",
-    "postcss": "^8.2.7",
-    "postcss-load-config": "^3.0.1",
-    "svelte": "^3.35.0",
-    "svelte-jester": "^2.1.5",
-    "svelte-preprocess": "^4.6.9",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.2.3",
-    "vite": "^2.1.0"
-  },
-  "dependencies": {
-    "tailwindcss": "^2.1.2"
-  }
+	"name": "resume-new",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "npm run test:integration && npm run test:unit",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
+		"test:integration": "playwright test",
+		"test:unit": "vitest"
+	},
+	"devDependencies": {
+		"@playwright/test": "^1.28.1",
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.20.4",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
+		"autoprefixer": "^10.4.14",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte": "^2.30.0",
+		"postcss": "^8.4.24",
+		"postcss-load-config": "^4.0.1",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"tailwindcss": "^3.3.2",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2",
+		"vitest": "^0.32.2"
+	},
+	"type": "module"
 }
